src/objects/Data_Submission__c.object
<CustomObject>
    <description>Object encapsulating metadata and status of data submission in some external system. 

* Part of IATA GADM project</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Data Submissions</relationshipLabel>
        <relationshipName>Data_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Actor_Id__c</fullName>
        <label>External Actor Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Data_Submissions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Data_Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Data submission. Original record created during file submission.</description>
        <label>Parent Data Submission</label>
        <referenceTo>Data_Submission__c</referenceTo>
        <relationshipLabel>Data Submissions</relationshipLabel>
        <relationshipName>Data_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Result of data submission</description>
        <label>Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Icon__c</fullName>
        <formula>&quot;da&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_date__c</fullName>
        <description>Date of submission</description>
        <label>Submission date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Data_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submission</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User responsible for data submission</description>
        <label>User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Data Submissions</relationshipLabel>
        <relationshipName>Data_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Data Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>User__c</columns>
        <columns>Submitter__c</columns>
        <columns>Original_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DSR-{00000}</displayFormat>
        <label>Data Submission Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>